// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaObject /> with additional className matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium TEST_CLASSNAME"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    />
    <FixedGridColumn />
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with arbitrary children matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    />
    <FixedGridColumn>
      <div
        className="CHILDREN"
      >
        CHILDREN CONTENT
      </div>
    </FixedGridColumn>
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with extra content at extra large size matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-xLarge"
>
  <FixedGridRow
    gutterSize="xLarge"
  >
    <FixedGridColumn
      className="y-media-object__size-xLarge--image"
      fixed={true}
      width={72}
    />
    <FixedGridColumn>
      <MediaObjectExtra
        ellipsis={true}
      >
        <div
          className="EXTRA"
        >
          EXTRA CONTENT
        </div>
      </MediaObjectExtra>
    </FixedGridColumn>
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with extra content matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    />
    <FixedGridColumn />
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with extra content with allowTextWrap matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-xLarge"
>
  <FixedGridRow
    gutterSize="xLarge"
  >
    <FixedGridColumn
      className="y-media-object__size-xLarge--image"
      fixed={true}
      width={72}
    />
    <FixedGridColumn>
      <MediaObjectExtra
        ellipsis={false}
      >
        <div
          className="EXTRA"
        >
          EXTRA CONTENT
        </div>
      </MediaObjectExtra>
    </FixedGridColumn>
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with image content matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    >
      <img
        alt=""
        src="404.jpg"
      />
    </FixedGridColumn>
    <FixedGridColumn />
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with metadata content at extra small size matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-xSmall"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-xSmall--image"
      fixed={true}
      width={24}
    />
    <FixedGridColumn />
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with metadata content matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    />
    <FixedGridColumn>
      <MediaObjectMetadata
        ellipsis={true}
        size="medium"
      >
        <div
          className="METADATA"
        >
          METADATA CONTENT
        </div>
      </MediaObjectMetadata>
    </FixedGridColumn>
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with metadata content with allowTextWrap matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    />
    <FixedGridColumn>
      <MediaObjectMetadata
        ellipsis={false}
        size="medium"
      >
        <div
          className="METADATA"
        >
          METADATA CONTENT
        </div>
      </MediaObjectMetadata>
    </FixedGridColumn>
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with minimal options matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    />
    <FixedGridColumn />
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with title content matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    />
    <FixedGridColumn>
      <MediaObjectTitle
        ellipsis={true}
        size="medium"
      >
        <div
          className="TITLE"
        >
          TITLE CONTENT
        </div>
      </MediaObjectTitle>
    </FixedGridColumn>
  </FixedGridRow>
</div>
`;

exports[`<MediaObject /> with title content with allowTextWrap matches its snapshot 1`] = `
<div
  className="y-media-object y-media-object__size-medium"
>
  <FixedGridRow
    gutterSize="medium"
  >
    <FixedGridColumn
      className="y-media-object__size-medium--image"
      fixed={true}
      width={40}
    />
    <FixedGridColumn>
      <MediaObjectTitle
        ellipsis={false}
        size="medium"
      >
        <div
          className="TITLE"
        >
          TITLE CONTENT
        </div>
      </MediaObjectTitle>
    </FixedGridColumn>
  </FixedGridRow>
</div>
`;
